--- a/Assignment/index.html
+++ b/Assignment/index.html
@@ -1,65 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>The Path to Success: Achieving Your Career Dreams</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>The Path to Success: Achieving Your Career Dreams</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-    <header>
-        <h1>The Path to Success: Achieving Your Career Dreams</h1>
-        <nav>
-            <a href="#home">Home</a>
-            <a href="#steps">Step by Step Guide</a>
-            <a href="#inspiration">Inspiration & Resources</a>
-        </nav>
-    </header>
+<body class="home">
+  <header>
+    <h1>The Path to Success: Achieving Your Career Dreams</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="steps.html">Step-by-Step Guide</a>
+      <a href="inspiration.html">Inspiration & Resources</a>
+    </nav>
+  </header>
 
-    <!-- Home Section -->
-    <section id="home">
-        <h2>My Career Goal: Networking Engineer</h2>
-        <p>I aspire to become a skilled <strong>Networking Engineer</strong>. This career allows me to design, build, and maintain computer networks that keep businesses and people connected. It is a vital role in the digital age, and I am passionate about ensuring secure and efficient communication systems across the globe.</p>
-        <img src="networking_engineer.jpg" alt="Networking Engineer working with cables and routers">
-    </section>
-
-    <!-- Steps Section -->
-    <section id="steps">
-        <h2>Step by Step Guide</h2>
-        <ol>
-            <li>Earn a Bachelor's degree in Information Technology or Computer Networking</li>
-            <li>Study for and earn networking certifications (e.g., CCNA, CompTIA Network+)</li>
-            <li>Gain hands-on experience through internships or entry-level IT jobs</li>
-            <li>Build skills in configuring routers, switches, and network security tools</li>
-            <li>Work in roles like Network Technician or Junior Network Engineer</li>
-            <li>Continue professional development through advanced certifications (e.g., CCNP, Cisco DevNet)</li>
-        </ol>
-    </section>
-
-    <!-- Inspiration Section -->
-    <section id="inspiration">
-        <h2>Inspiration & Resources</h2>
-        <table>
-            <tr>
-                <th>Influential Figure</th>
-                <th>Field</th>
-                <th>Link</th>
-            </tr>
-            <tr>
-                <td>Vinton Cerf</td>
-                <td>Father of the Internet</td>
-                <td><a href="https://en.wikipedia.org/wiki/Vint_Cerf" target="_blank">Learn more</a></td>
-            </tr>
-            <tr>
-                <td>Radia Perlman</td>
-                <td>Inventor of Spanning Tree Protocol</td>
-                <td><a href="https://en.wikipedia.org/wiki/Radia_Perlman" target="_blank">Learn more</a></td>
-            </tr>
-            <tr>
-                <td>Cisco Networking Academy</td>
-                <td>Training Resource</td>
-                <td><a href="https://www.netacad.com/" target="_blank">Visit site</a></td>
-            </tr>
-        </table>
-    </section>
+  <section class="content-box">
+    <h2>My Career Goal: Photographer & Videographer</h2>
+    <p>
+      I Muhammad Aliff Omar Bin Mohd Zulkhairi aspire to become a professional <strong>Photographer and Videographer</strong>, capturing moments, stories, and emotions through the lens. Whether it's creative portraits, cinematic video production, or event documentation, I find joy in turning real-life moments into powerful visuals.
+    </p>
+    <img src="camera.jpg" alt="Camera gear used for photography and videography" />
+    
+    <div class="page-links">
+      <h3>Explore More:</h3>
+      <ul>
+        <li><a href="steps.html">📷 Step-by-Step Guide</a></li>
+        <li><a href="inspiration.html">🎬 Inspiration & Resources</a></li>
+      </ul>
+    </div>
+  </section>
 </body>
 </html>
